--- a/views/navigation.pug
+++ b/views/navigation.pug
@@ -1,23 +1,28 @@
 nav#mainNav.navbar.navbar-expand-lg.fixed-top(style='background-image: linear-gradient(#04519b, #044687 60%, #033769);')
   .container
     block up_left_logo
-      a.navbar-brand(href='https://github.com/ssl-hep')
-        img.d-inline-block.align-top(src='images/SSL-logo-v5.png' width='30' height='30' alt='')
+      a.navbar-brand(href='https://github.com/ATLAS-Analytics')
+        img.d-inline-block.align-top(src='images/aaas.png' width='30' height='30' alt='')
         | #{Title}
     button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarResponsive' aria-controls='navbarResponsive' aria-expanded='false' aria-label='Toggle navigation')
       span.navbar-toggler-icon
     #navbarResponsive.collapse.navbar-collapse
       ul.navbar-nav.ml-auto
+
         li.nav-item
           a.nav-link(href='/') Home
+
         li.nav-item.dropdown
           a#navbarDropdown.nav-link.dropdown-toggle(href='#' role='button' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
             | Services
           .dropdown-menu(aria-labelledby='navbarDropdown')
             if (loggedIn)
-              a.dropdown-item(href='/Networking') Networking
-              a.dropdown-item(href='/Computing') Computing
-              a.dropdown-item(href='/Analytics') Analytics
+              a.dropdown-item(href='/networking') Networking
+              a.dropdown-item(href='/computing') Computing
+              a.dropdown-item(href='/analytics') Analytics
+
+        li.nav-item
+          a.nav-link(href='/my_subscriptions') My Subscriptions
 
         if (!loggedIn)
           li.login_button.nav-item
