--- a/views/head.pug
+++ b/views/head.pug
@@ -1,5 +1,5 @@
 head
-    title ML Front
+    title Alarm And Alert Service
     meta(http-equiv='Content-Type', content='text/html; charset=utf-8')
     meta(charset='UTF-8')
     meta(name='google', content='notranslate')
