--- a/views/head.pug
+++ b/views/head.pug
@@ -6,10 +6,10 @@ head
     meta(http-equiv='Content-Language', content='en')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
-    meta(name='description', content='Machine Learning Platform')
+    meta(name='description', content='Alarm and Alert subscriptions')
     meta(name='keywords', content='ML, Alarms, Alerts, anomaly detection')
     meta(name='author', content='Ilija Vukotic')
-    link(rel='shortcut icon', href='images/favicon.ico', type='image/x-icon')
+    link(rel='shortcut icon', href='../static/images/favicon.ico', type='image/x-icon')
     
     //- production
     link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css" integrity="sha512-oc9+XSs1H243/FRN9Rw62Fn8EtxjEYWHXRvjS43YtueEewbS6ObfXcJNyohjHqVKFPoXXUxwc+q1K7Dee6vv9g==" crossorigin="anonymous")
