--- a/views/navigation.pug
+++ b/views/navigation.pug
@@ -12,21 +12,28 @@ nav#mainNav.navbar.navbar-expand-lg.fixed-top(style='background-image: linear-gr
         li.nav-item
           a.nav-link(href='/') Home
 
-        li.nav-item.dropdown
-          a#navbarDropdown.nav-link.dropdown-toggle(href='#' role='button' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
-            | Alarms
-          .dropdown-menu(aria-labelledby='navbarDropdown')
-            if (loggedIn)
-              a.dropdown-item(href='/networking') Networking
-              a.dropdown-item(href='/computing') Computing
-              a.dropdown-item(href='/analytics') Analytics
+
 
         if (!loggedIn)
           li.login_button.nav-item
             a.nav-link(href='/login') Login
         
         if (loggedIn)
+
+          li.nav-item
+            a.nav-link(href='/all_alarms') All alarms
+
+          //- li.nav-item.dropdown
+          //- a#navbarDropdown.nav-link.dropdown-toggle(href='#' role='button' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
+          //-   | All alarms
+          //- .dropdown-menu(aria-labelledby='navbarDropdown')
+          //-   if (loggedIn)
+          //-     a.dropdown-item(href='/networking') Networking
+          //-     a.dropdown-item(href='/computing') Computing
+          //-     a.dropdown-item(href='/analytics') Analytics
+
           li.nav-item
             a.nav-link(href='/my_subscriptions') My Subscriptions
+
           li.profile_button.nav-item
             a.nav-link(href='/profile') Profile
