--- a/views/index.pug
+++ b/views/index.pug
@@ -23,7 +23,8 @@ html
             script(src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" integrity="sha256-KM512VNnjElC30ehFwehXjx1YCHPiQkOPmqnrWtpccM=" crossorigin="anonymous")
             // data tables
             script(src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js")
-
+            // jquery tree
+            script(src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js")
 
             // twitter bootstrap for mobile
             script(src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha256-CjSoeELFOcH0/uxWu6mC/Vlrc1AARqbm/jiiImDGV3s=" crossorigin="anonymous")
