--- a/views/index.pug
+++ b/views/index.pug
@@ -13,7 +13,7 @@ html
                         | Please overwrite this.
                     .col-lg-2.mx-auto
                     .col-lg-4.mx-auto
-                        asdf
+                        iframe(src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize#/edit/2513afb0-28de-11eb-8f92-953711258120?auth_provider_hint=anonymous1&embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-7d%2Cto%3Anow))" height="300" width="400")
 
         block footer
             include ./footer.pug
@@ -28,8 +28,8 @@ html
             // jquery tree
             script(src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js")
 
-            // twitter bootstrap for mobile
-            script(src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha256-CjSoeELFOcH0/uxWu6mC/Vlrc1AARqbm/jiiImDGV3s=" crossorigin="anonymous")
+            //- script(src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha256-CjSoeELFOcH0/uxWu6mC/Vlrc1AARqbm/jiiImDGV3s=" crossorigin="anonymous")            
+            script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js")
 
             // poppers management https://popper.js.org/
             script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha256-ZvOgfh+ptkpoa2Y4HkRY28ir89u/+VRyDE7sB7hEEcI=" crossorigin="anonymous")
