--- a/views/index.pug
+++ b/views/index.pug
@@ -13,7 +13,8 @@ html
                         | Please overwrite this.
                     .col-lg-2.mx-auto
                     .col-lg-4.mx-auto
-                        iframe(src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize#/edit/2513afb0-28de-11eb-8f92-953711258120?auth_provider_hint=anonymous1&embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-7d%2Cto%3Anow))" height="300" width="400")
+                        iframe(src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize?auth_provider_hint=anonymous1#/edit/2513afb0-28de-11eb-8f92-953711258120?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-7d%2Cto%3Anow))" height="300" width="400")
+
 
         block footer
             include ./footer.pug
