--- a/views/navigation.pug
+++ b/views/navigation.pug
@@ -8,6 +8,9 @@ nav#mainNav.navbar.navbar-inverse
       li 
         p.navbar-text.nav-item
           a(href='./') Home
+      li 
+        p.navbar-text.nav-item
+          a(href='/docs') Docs
       if (loggedIn)
         li
           p.navbar-text.nav-item
